syntax = "proto3";

package golem.common;

message RevertWorkerTarget {
  oneof target {
    RevertToOplogIndex RevertToOplogIndex = 1;
    RevertLastInvocations RevertLastInvocations = 2;
  }
}

message RevertToOplogIndex {
  int64 last_oplog_index = 1;
}

message RevertLastInvocations {
  int64 number_of_invocations = 1;
}